Update ReflectUtils
lib: Updated the `ReflectUtils` class to use Java 9 replacements for
`SharedSecrets` and `JavaLangAccess`.